IN DEVELOPMENT ======= 1.3.0

- added: framework.config['allow-reconfigure']
- added: framework.config.ip (set the ip address from a configuration)
- added: framework.config.port (set the port from a configuration)
- added: framework.onRequest(req, res)
- added: framework.worker(name, [id], [timeout])
- added: framework.workers
- added: framework.reconnect()
- added: framework.responseImage(req, res, filename/stream, fnProcess, [headers], [isIM])
- added: framework.fs.create.temporary(name, stream, [callback])
- added: framework.fs.rm.temporary(name)
- added: framework.on('ready')
- added: framework.on('reconfigure')
- added: framework.injectVersions(url, [rewrite])
- added: controller.image(filename/stream, fnProcess, [headers], [isIM])
- added: controller.subdomain (alias -> req.subdomain)
- added: controller.custom()
- added: controller.clear()
- added: controller.noClear()
- added: FrameworkImage.measure(callback)
- added: FrameworkImage.pipe(stream)
- added: HttpFile.stream([options])
- added: HttpFile.pipe(stream)
- added: HttpFile.measure(callback)
- added: HttpFile.md5(callback)
- added: builders.schema supports join models
- added: Number.parseDate([plus])
- added: supports 400 (Bad request)
- added: dynamic render View and Template from string
- added: simply static files versioning (example: static-version)
- added: utils.distance(lat1, lng1, lat2, lng2)

- updated: FrameworkImage supports stream (image.pipe() and new Image(stream or filename))
- updated: FrameworkImage.minify()
- updated: FrameworkImage.command(name, value, [priority])
- updated: Framework.file();
- updated: builders.schema()
- updated: builders.defaults()
- updated: builders.prepare()
- updated: controller.validate()
- updated: controller.close([end])
- updated: controller.content(name, [contentType/return content], [headers])
- updated: utils.validate()
- updated: utils.httpStatus()
- updated: nosql (extended buffer)
- updated: req.hostname()
- updated: binary
