@@ -3,28 +3,38 @@ exports.install = function(framework) {
 };
 
 function view_database() {
-	
-	var self = this;
-	var db = self.app.db();
 
-	db.collections(function(err, data) {
+	var self = this;
+
+	// definitions/database.js
+	var db = self.database('your-database-name');
+
+	db.collections(function(err, rows) {
 
 		if (err) {
-			self.plain(err.toString());
+			self.view500(err);
 			return;
 		}
 
-		var rows = [];
-		data.forEach(function(o) {
-			rows.push('collection -> ' + o);
+		var collection = [];
+
+		rows.forEach(function(o) {
+			collection.push('collection -> ' + o);
 		});
 
 		// Bad documentation: https://github.com/petersirka/node-mongolab
-		db.insert('users', { name: 'Peter', age: 25 }, function(err, data) {
-			// DONE
-		});		
 
-		// return all rows
-		self.plain(rows.join('\n'));
+		db.documents('products', {}, function(err, rows) {
+			// DONE
+		    console.log(rows);
+		});
+
+		db.insert('users', { name: 'Peter', age: 25 }, function(err, result) {
+			// DONE
+			console.log(result);
+		});
+
+		// response all collections as JSON
+		self.json(collection);
 	});
 }
